<resources>

    <!-- Common strings -->

    <string name="app_name_vpn">CyberSelf</string>
    <string name="tap_to_exit">Press Back again to exit.</string>
    <string name="cancel">Cancel</string>

    <!-- Errors -->

    <string name="generic_error">Something went wrong. Please try later.</string>
    <string name="server_error">Server error. Please try later.</string>
    <string name="timeout_error">Timeout error. Please try again when network stabilizes.</string>
    <string name="noInternetConnection_error">No internet connection. Please check the internet.</string>
    <string name="unauthorized_error">Unauthorized error. Please sign-in and try again.</string>
    <string name="notFound_error">404 error. Please try later.</string>
    <string name="badRequest_error">400 error. Bad request. Please try later.</string>
    <string name="emptyField_error">This field must not be empty.</string>
    <string name="userNotExist_error">User does not exist</string>
    <string name="invalidLogin_error">Invalid Login.</string>
    <string name="weakPassword_error">Your password must be at least 8 characters long and consist of a number and uppercase and lowercase letters.</string>
    <string name="passwordReset_error">Error resetting password. Please try later.</string>
    <string name="passwordReset_linkExpires_error">Your link has expired. Please request a new link.</string>
    <string name="password_doesNot_match_error">Password does not match</string>
    <string name="passwordForgot_error">Error restoring access. Please try later.</string>
    <string name="no_photos_error">Photo required.</string>

    <!-- Permission -->

    <string name="save_file_permission_error">To download a file, you must obtain permission to write to the phone storage.</string>
    <string name="image_picker_permission_error">To set image profile, you must obtain permission to read to the phone storage.</string>

    <!-- Notifications -->
    <string name="notifications_time_now">now</string>
    <string name="notifications_time_yesterday">yesterday</string>
    <string name="notifications_time_minute">minute</string>
    <string name="notifications_time_hour">hour</string>

    <!-- Fragment Privacy -->
    <string name="fr_privacy_title">Your privacy \ncomes first</string>
    <string name="fr_privacy_text">HotspotShield collects a minimal amount of data to offer you a fast and reliable VPN service.\n\nWe collect:</string>
    <string name="fr_privacy_li_text_1">Device-specific information like OS version, hardware model, and IP address to optimize our network connection to you. We do not store or log your IP address after you disconnect from the VPN.</string>
    <string name="fr_privacy_li_text_2">Aggregated anonymous website activity data, to perform analytics on our service and to ensure you can reliably access certain websites or apps</string>
    <string name="fr_privacy_li_text_3">Total bandwidth consumed and time connected to our VPN service</string>
    <string name="fr_privacy_li_text_4">Payment information and optional email, when you purchase a paid plan</string>
    <string name="fr_privacy_btn_text">Accept and continue</string>

    <!-- Fragment Intro -->
    <string name="fr_intro_title1">Protect your privacy</string>
    <string name="fr_intro_text1">Protect your internet data\n&amp; information</string>
    <string name="fr_intro_title2">Premium servers</string>
    <string name="fr_intro_text2">Connect to 3,200 servers in 90+ countries\nthrough proprietary VPN</string>
    <string name="fr_intro_btn_text">Continue</string>

    <!-- Fragment Subscription -->
    <string name="fr_subscription_title">Full access</string>
    <string name="fr_subscription_subtitle">Start your 3-day free trial.</string>
    <string name="fr_subscription_purchased">Purchased?</string>
    <string name="fr_subscription_btn_text">Try fo free</string>
    <string name="fr_subscription_terms">Terms of service &amp; Privacy policy</string>
    <string name="fr_subscription_type1">Annual</string>
    <string name="fr_subscription_description1">3 day trial - then 24.99/year.</string>
    <string name="fr_subscription_type2">Monthly</string>
    <string name="fr_subscription_description2">3 day trial - then 9.99/month</string>
    <string name="fr_subscription_type3">Week</string>
    <string name="fr_subscription_description3">3 day trial - then 2.99/week</string>
    <string name="fr_subscription_cancel">Cancel Anytime in Google Play</string>

    <!-- Fragment Main -->
    <string name="fr_main_btn_start">Start</string>
    <string name="fr_main_btn_stop">Stop</string>
    <string name="fr_main_press_to_connect">Press to connect</string>
    <string name="fr_main_press_to_disconnect">Press to disconnect</string>
    <string name="fr_main_connecting">Connecting ...</string>
    <string name="fr_main_reconnecting">Reconnecting ...</string>

    <string name="vpn_on">VPN ON</string>
    <string name="vpn_off">VPN OFF</string>
    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer close</string>
    <string name="connect">Connect</string>
    <string name="connecting">Connecting</string>
    <string name="disconnect">Disconnect</string>
    <string name="connection_close_confirm">Would you like to cancel the current VPN Connection?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <!-- Fragment BottomSheet -->
    <string name="fr_bottom_title">Virtual location</string>
    <string name="fr_bottom_best_choice">Best choice</string>

    <!-- Fragment Settings -->
    <string name="fr_settings">Settings</string>
    <string name="fr_settings_check_connection">Check connection speed</string>
    <string name="fr_settings_restore">Restore purchase</string>
    <string name="fr_settings_contact">Contact support</string>
    <string name="fr_settings_privacy">Privacy Policy</string>
    <string name="fr_settings_terms">Terms of use</string>
    <string name="fr_settings_rate">Rate app</string>
    <string name="fr_settings_share">Share SmartCrypt</string>

    <!-- Fragment Support -->
    <string name="fr_support">Support</string>
    <string name="fr_support_connect">Connect Issues</string>
    <string name="fr_support_browsing">Slow browsing</string>
    <string name="fr_support_else">Something else</string>

    <!-- Fragment Speed Test -->
    <string name="fr_speed_test_press_to_check">Press to check</string>
    <string name="fr_speed_test_calculation">Calculation…</string>
    <string name="fr_speed_test_error">Error</string>
    <string name="fr_speed_test_start">Start</string>
    <string name="fr_speed_test_restart">Restart</string>
    <string name="fr_speed_test_download">Download</string>
    <string name="fr_speed_test_upload">Upload</string>
    <string name="fr_speed_test_ping">Ping</string>
    <string name="fr_speed_test_mbps">mbps</string>
    <string name="fr_speed_test_ms">ms</string>
    <string name="fr_speed_test_initialization">Initialization</string>

    <!-- Activity Ad -->
    <!-- Fragment Alert -->
    <string name="fr_alert_checking_connection">Checking your connection…</string>
    <string name="fr_alert_start_scanning">Start Scanning</string>
    <string name="fr_alert_fix_issues">Fix Connection Issues</string>
    <string name="fr_alert_done">Done</string>
    <string name="fr_alert_detected">Detected</string>
    <string name="fr_alert_connection_issues">connection issues</string>
    <string name="fr_alert_issues">%1$d issues</string>
    <string name="fr_alert_were_founded">were founded</string>
    <string name="fr_alert_issues_are_fixed">%1$d connection Issues are fixed</string>
    <string name="fr_alert_connection_safe">Your connection is safe now</string>
    <string name="fr_alert_connection_is_not_secured">Your connection is not secured:</string>
    <string name="fr_alert_founded_issues_text">• Your Personal data could be leaked on public networks\n• Your browser history may be known by your internet provider\n• Your Location may be known to site owners/hosters</string>
    <string name="fr_alert_scan_required">Scan Required</string>
    <string name="fr_alert_connection_is_not_secured_enough">Your connection is not secured enough!</string>
    <string name="fr_alert_error">Error!</string>

    <!-- Fragment Scan -->
    <string name="fr_scan_scanning_for">Scanning for</string>
    <string name="fr_scan_removing">Removing</string>
    <string name="fr_scan_connection_issues">connection issues…</string>
    <string name="fr_alert_first_item">Your connection is automatically protected when this app is installed</string>
    <string name="fr_alert_second_item">Do not delete /App-Name/ to prevent connection issues in future</string>


</resources>
