<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_offset_m"
        android:layout_marginTop="@dimen/common_offset_m"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSettingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fr_settings"
        android:textColor="@color/white"
        android:textSize="@dimen/common_textSize_xl"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBanner"
        android:layout_width="match_parent"
        android:layout_height="155dp"
        android:layout_marginTop="@dimen/common_offset_xl"
        android:layout_marginHorizontal="@dimen/common_offset_m"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:srcCompat="@drawable/banner" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBanner">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btnCheckConnection"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="@dimen/common_offset_l">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivCheckConnection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_offset_s"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_lightning" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCheckConnection"
                    style="@style/TextAppearance.TextViewSubtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_offset_s"
                    android:gravity="center"
                    android:text="@string/fr_settings_check_connection"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/ivCheckConnection"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/common_offset_m"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_settings_arrow" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.cyberself.vpn.util.view.SettingsItem
                android:id="@+id/btnRestorePurchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_purchase"
                app:text="@string/fr_settings_restore" />

            <com.cyberself.vpn.util.view.SettingsItem
                android:id="@+id/btnContactSupport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_support"
                app:text="@string/fr_settings_contact" />

            <com.cyberself.vpn.util.view.SettingsItem
                android:id="@+id/btnPrivacyPolicy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_privacy"
                app:text="@string/fr_settings_privacy" />

            <com.cyberself.vpn.util.view.SettingsItem
                android:id="@+id/btnTerms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_terms"
                app:text="@string/fr_settings_terms" />

            <com.cyberself.vpn.util.view.SettingsItem
                android:id="@+id/btnRateApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_like"
                app:text="@string/fr_settings_rate" />

            <com.cyberself.vpn.util.view.SettingsItem
                android:id="@+id/btnShare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_share"
                app:text="@string/fr_settings_share" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible" />

</androidx.constraintlayout.widget.ConstraintLayout>
