<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_offset_m"
        android:layout_marginTop="@dimen/common_offset_m"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSupportTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fr_support"
        android:textColor="@color/white"
        android:textSize="@dimen/common_textSize_xl"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_offset_xl"
        android:scaleType="fitXY"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:srcCompat="@drawable/banner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivBanner">

        <com.cyberself.vpn.util.view.SettingsItem
            android:id="@+id/btnConnectIssues"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_bug"
            app:text="@string/fr_support_connect" />

        <com.cyberself.vpn.util.view.SettingsItem
            android:id="@+id/btnSlowBrowsing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_network"
            app:text="@string/fr_support_browsing" />

        <com.cyberself.vpn.util.view.SettingsItem
            android:id="@+id/btnElse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_sms"
            app:text="@string/fr_support_else" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
